fix spacing

--- a/NasaChallenge2024/wwwroot/css/controls/_distance_panel.scss
+++ b/NasaChallenge2024/wwwroot/css/controls/_distance_panel.scss
@@ -32,5 +32,4 @@
 
 .distance-panel-buttons-item {
     pointer-events: all;
-    margin: 2px 8px;
 }
